samples/_failures_safe/1761421950_02ec33_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d80535b.c: In function ‘main’:
./samples/SAFE/__tmp_9d80535b.c:150:28: error: missing terminating " character
  150 |                     printf("Error: Matrices must have same dimensions
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9d80535b.c:150:21: error: expected expression at end of input
  150 |                     printf("Error: Matrices must have same dimensions
      |                     ^~~~~~
./samples/SAFE/__tmp_9d80535b.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d80535b.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d80535b.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d80535b.c:150:21: error: expected declaration or statement at end of input
